fix(web): Increase size of spacebar text
The caption on the spacebar used to be 60%. This change increases it to
100%, but that might be sometimes too big. On the other hand, 80% still
seemed to be too small.

Fixes #7940.

--- a/web/src/resources/osk/kmwosk.css
+++ b/web/src/resources/osk/kmwosk.css
@@ -526,7 +526,7 @@ div.android div.kmw-keytip-cap {
 .kmw-wait-graphic{width:100%;min-height:19px;background:url('ajax-loader.gif') no-repeat;background-position:center top;}
 .kmw-alert-text{margin:10px;white-space:default;font-family:Arial,sans-serif;}
 
-.kmw-spacebar-caption{font:0.6em Arial !important;color:rgba(0,0,0,0.25);}
+.kmw-spacebar-caption{font:1em Arial !important;color:rgba(0,0,0,0.25);}
 
 /* Probably best to make this its own CSS that can be optionally included? */
 @media (prefers-color-scheme: dark) {
